fix third party check - by adding the incubating vector module